rean/01-rean-vpc.yaml
Description: >
    This template deploys a VPC for REAN Cloud Clients/Tenant, with a pair of public and private subnets spread 
    across two Availabilty Zones. It deploys an Internet Gateway, with a default route on the public subnets. 
    It deploys a pair of NAT Gateways (one in each AZ), and default routes for them in the private subnets.

Parameters:

    EnvironmentName:
        Description: An environment name that will be prefixed to resource names
        Type: String
        Default: Mgmt

    VpcCIDR: 
        Description: Please enter the IP range (CIDR notation) for this VPC
        Type: String
        Default: 10.108.0.0/16

    PublicSubnet1CIDR:
        Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
        Type: String
        Default: 10.108.10.0/24

    PublicSubnet2CIDR:
        Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
        Type: String
        Default: 10.108.11.0/24

    PrivateSubnet1CIDR:
        Description: Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone
        Type: String
        Default: 10.108.20.0/24

    PrivateSubnet2CIDR:
        Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
        Type: String
        Default: 10.108.21.0/24

    TenantTag:
        Description: Enter the Tenant Name 
        Type: String
        Default: Rean-Cloud

    SecurityLevelTag:
        Description: Enter the Value of Secuirty Level ( FedRAMP, HIPAA, Standard)
        Type: String
        Default: HIPAA

    POCTag: 
        Description: Value for the Point of Contact
        Type: String
        Default: Nick Martinelli

    CreatorTag: 
        Description: Value for the Creator Tag
        Type: String
        Default: Samal Dimdung

    CostCenterTag:
        Description: Value for the Cost Center Tags
        Type: String
        Default: "DevOps-108"


Resources:

    VPC: 
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: !Ref VpcCIDR
            Tags: 
                - Key: Name 
                  Value: !Ref EnvironmentName
                - Key: Tenant
                  Value: !Ref TenantTag
                - Key: SecurityLevel
                  Value: !Ref SecurityLevelTag
                - Key: PointOfContact
                  Value: !Ref POCTag
                - Key: Creator
                  Value: !Ref CreatorTag
                - Key: CostCenter 
                  Value: !Ref CostCenterTag
            
    InternetGateway:
        Type: AWS::EC2::InternetGateway
        Properties:
            Tags: 
                - Key: Name 
                  Value: !Ref EnvironmentName
                - Key: Tenant
                  Value: !Ref TenantTag
                - Key: SecurityLevel
                  Value: !Ref SecurityLevelTag
                - Key: PointOfContact
                  Value: !Ref POCTag
                - Key: Creator
                  Value: !Ref CreatorTag
                - Key: CostCenter 
                  Value: !Ref CostCenterTag
            
    InternetGatewayAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            InternetGatewayId: !Ref InternetGateway
            VpcId: !Ref VPC

    PublicSubnet1: 
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 0, !GetAZs ]
            CidrBlock: !Ref PublicSubnet1CIDR
            MapPublicIpOnLaunch: true
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Public Subnet (AZ1)
                - Key: Tenant
                  Value: !Ref TenantTag
                - Key: SecurityLevel
                  Value: !Ref SecurityLevelTag
                - Key: PointOfContact
                  Value: !Ref POCTag
                - Key: Creator
                  Value: !Ref CreatorTag
                - Key: CostCenter 
                  Value: !Ref CostCenterTag

    PublicSubnet2: 
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 1, !GetAZs ]
            CidrBlock: !Ref PublicSubnet2CIDR
            MapPublicIpOnLaunch: true
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Public Subnet (AZ2)
                - Key: Tenant
                  Value: !Ref TenantTag
                - Key: SecurityLevel
                  Value: !Ref SecurityLevelTag
                - Key: PointOfContact
                  Value: !Ref POCTag
                - Key: Creator
                  Value: !Ref CreatorTag
                - Key: CostCenter 
                  Value: !Ref CostCenterTag

    PrivateSubnet1: 
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 0, !GetAZs ]
            CidrBlock: !Ref PrivateSubnet1CIDR
            MapPublicIpOnLaunch: false
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Subnet (AZ1)
                - Key: Tenant
                  Value: !Ref TenantTag
                - Key: SecurityLevel
                  Value: !Ref SecurityLevelTag
                - Key: PointOfContact
                  Value: !Ref POCTag
                - Key: Creator
                  Value: !Ref CreatorTag
                - Key: CostCenter 
                  Value: !Ref CostCenterTag

    PrivateSubnet2: 
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 1, !GetAZs ]
            CidrBlock: !Ref PrivateSubnet2CIDR
            MapPublicIpOnLaunch: false
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Subnet (AZ2)
                - Key: Tenant
                  Value: !Ref TenantTag
                - Key: SecurityLevel
                  Value: !Ref SecurityLevelTag
                - Key: PointOfContact
                  Value: !Ref POCTag
                - Key: Creator
                  Value: !Ref CreatorTag
                - Key: CostCenter 
                  Value: !Ref CostCenterTag

    NatGateway1EIP:
        Type: AWS::EC2::EIP
        DependsOn: InternetGatewayAttachment
        Properties: 
            Domain: vpc

    NatGateway2EIP:
        Type: AWS::EC2::EIP
        DependsOn: InternetGatewayAttachment
        Properties:
            Domain: vpc

    NatGateway1: 
        Type: AWS::EC2::NatGateway
        Properties: 
            AllocationId: !GetAtt NatGateway1EIP.AllocationId
            SubnetId: !Ref PublicSubnet1
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} NatGateway One
                - Key: Tenant
                  Value: !Ref TenantTag
                - Key: SecurityLevel
                  Value: !Ref SecurityLevelTag
                - Key: PointOfContact
                  Value: !Ref POCTag
                - Key: Creator
                  Value: !Ref CreatorTag
                - Key: CostCenter 
                  Value: !Ref CostCenterTag

    NatGateway2: 
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId: !GetAtt NatGateway2EIP.AllocationId
            SubnetId: !Ref PublicSubnet2
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} NatGateway Two
                - Key: Tenant
                  Value: !Ref TenantTag
                - Key: SecurityLevel
                  Value: !Ref SecurityLevelTag
                - Key: PointOfContact
                  Value: !Ref POCTag
                - Key: Creator
                  Value: !Ref CreatorTag
                - Key: CostCenter 
                  Value: !Ref CostCenterTag

    PublicRouteTable:
        Type: AWS::EC2::RouteTable
        Properties: 
            VpcId: !Ref VPC
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Public Routes
                - Key: Tenant
                  Value: !Ref TenantTag
                - Key: SecurityLevel
                  Value: !Ref SecurityLevelTag
                - Key: PointOfContact
                  Value: !Ref POCTag
                - Key: Creator
                  Value: !Ref CreatorTag
                - Key: CostCenter 
                  Value: !Ref CostCenterTag

    DefaultPublicRoute: 
        Type: AWS::EC2::Route
        DependsOn: InternetGatewayAttachment
        Properties: 
            RouteTableId: !Ref PublicRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref InternetGateway

    PublicSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PublicSubnet1

    PublicSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PublicSubnet2
    

    PrivateRouteTable1:
        Type: AWS::EC2::RouteTable
        Properties: 
            VpcId: !Ref VPC
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Routes (AZ1)
                - Key: Tenant
                  Value: !Ref TenantTag
                - Key: SecurityLevel
                  Value: !Ref SecurityLevelTag
                - Key: PointOfContact
                  Value: !Ref POCTag
                - Key: Creator
                  Value: !Ref CreatorTag
                - Key: CostCenter 
                  Value: !Ref CostCenterTag

    DefaultPrivateRoute1:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PrivateRouteTable1
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway1

    PrivateSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PrivateRouteTable1
            SubnetId: !Ref PrivateSubnet1

    PrivateRouteTable2:
        Type: AWS::EC2::RouteTable
        Properties: 
            VpcId: !Ref VPC
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Routes (AZ2)
                - Key: Tenant
                  Value: !Ref TenantTag
                - Key: SecurityLevel
                  Value: !Ref SecurityLevelTag
                - Key: PointOfContact
                  Value: !Ref POCTag
                - Key: Creator
                  Value: !Ref CreatorTag
                - Key: CostCenter 
                  Value: !Ref CostCenterTag

    DefaultPrivateRoute2:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PrivateRouteTable2
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway2

    PrivateSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PrivateRouteTable2
            SubnetId: !Ref PrivateSubnet2

Outputs: 

    VPC: 
        Description: A reference to the created VPC
        Value: !Ref VPC

    PublicSubnets:
        Description: A list of the public subnets
        Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ]]

    PrivateSubnets:
        Description: A list of the private subnets
        Value: !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]

    PublicSubnet1:
        Description: A reference to the public subnet in the 1st Availability Zone
        Value: !Ref PublicSubnet1

    PublicSubnet2: 
        Description: A reference to the public subnet in the 2nd Availability Zone
        Value: !Ref PublicSubnet2

    PrivateSubnet1:
        Description: A reference to the private subnet in the 1st Availability Zone
        Value: !Ref PrivateSubnet1

    PrivateSubnet2: 
        Description: A reference to the private subnet in the 2nd Availability Zone
        Value: !Ref PrivateSubnet2
